--- a/kra-coeus-irb-8-27/irb-specialreview.html
+++ b/kra-coeus-irb-8-27/irb-specialreview.html
@@ -68,7 +68,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
       
 
       <dt><span class="tabright">
-        <input name="Submit" type="submit" onClick="MM_goToURL('self','irb-protocol.html');return document.MM_returnValue" value="Protocol">
+        <input name="Submit" type="submit" onClick="MM_goToURL('self','irb-protocol-MR.html');return document.MM_returnValue" value="Protocol">
         </span></dt>  <dt><span class="tabright">
         <input name="Submit" type="submit" onClick="MM_goToURL('self','irb-personnel.html');return document.MM_returnValue" value="Personnel">
         </span></dt>  <dt><span class="tabright">
