--- a/menu/kra_iframes/maint-maintdoc-shared-Credit.html
+++ b/menu/kra_iframes/maint-maintdoc-shared-Credit.html
@@ -207,7 +207,7 @@
 	
 		<a name="topOfForm"></a>
 		<div class="headerarea-kra" id="headerarea">
-			<h1>Investigator Credit Type&nbsp;
+			<h1>Investigator Credit Type Maintenance Document&nbsp;
 
 
 
@@ -256,7 +256,7 @@
 				
 
 
-<input class="tinybutton" name="methodToCall.save" src="maint-maintdoc-shared-Credit_files/pixel_clear.gif" border="0" height="0" type="image" width="0">
+            <input class="tinybutton" name="methodToCall.save" src="maint-maintdoc-shared-Credit_files/pixel_clear.gif" border="0" height="0" type="image" width="0">
 			
 	
 
