Main Menu Changes by Lora(March11)
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6072 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/menu/kra_v3/admin.html
+++ b/menu/kra_v3/admin.html
@@ -71,7 +71,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
         <div class="chan-contain">
           <div class="body">
             <ul class="chan">
-              <li><a href="admin-batch-schedule.html">Batch Schedule</a></li>
+              <li>Batch Schedule</li>
             </ul>
           </div>
         </div>
