--- a/menu/kra_v3/maint.html
+++ b/menu/kra_v3/maint.html
@@ -97,7 +97,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
               <li>Training</li>
               <li>User Preference Variables</li>
               <li>Unit Administrator Type</li>
-              <li>Valid Rates </li><li></li>
+              <li>Valid Rates</li>
             </ul>
           </div>
         </div></td>
