--- a/menu/kra_v3/centad.html
+++ b/menu/kra_v3/centad.html
@@ -174,7 +174,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
           </span> <span class="right"><a href="#"><img src="../../images/my_cp_inf.gif" alt="help" width="15" height="14" hspace="3" vspace="4" border="0" align="absmiddle" onClick="MM_openBrWindow('../final/help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></span> </div>
         <div class="body">
             <ul class="chan">
-              <li><a href="#">Current Locks</a></li>
+              <li>Current Locks</li>
               <li>Current &amp; Pending Support</li>
               <li><a href="#">Grants.gov Opportunity Lookup</a></li>
               <li><a href="maint-shared-rolodex.html">Non-employee Lookup</a></li>
