--- a/kra-coeus-7-25/bud-distincome2-tw-MR.html
+++ b/kra-coeus-7-25/bud-distincome2-tw-MR.html
@@ -137,10 +137,10 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
             <table cellpadding="0" cellspacing="0" summary="view/edit ad hoc recipients">
               <tr>
                 <th scope="col" style="height: 14px">&nbsp; </th>
-                <th scope="col" style="height: 14px"> <label for="fiscal year"> *Fiscal Year</label></th>
+                <th scope="col" style="height: 14px"> <label for="fiscal year"> Fiscal Year</label></th>
                 <th scope="col" style="height: 14px"> <label for="percentage"> Percentage</label></th>
-                <th scope="col" style="height: 14px"> <label for="source account"> *Source Account</label></th>
-                <th scope="col" style="height: 14px"> <label for="amount"> *Amount</label></th>
+                <th scope="col" style="height: 14px"> <label for="source account"> Source Account</label></th>
+                <th scope="col" style="height: 14px"> <label for="amount"> Amount</label></th>
                 <th scope="col" style="height: 14px"> Actions</th>
               </tr>
               <tr>
@@ -223,29 +223,40 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                 <td><div align="center"> <a href="#"> <img src="../images/tinybutton-delete1.gif" alt="delete" width="40" height="15" hspace="3"
                                                     vspace="3" border="0"></a></div></td>
               </tr>
+			  <tr>
+                <th scope="row" colspan="4"> <div align="right"> 
+                    &nbsp;Total Allocated:</div></th>
+                <td><div align="right">
+                    &nbsp;$2,100.00</div></td>
+                <th><div align="center"> &nbsp;</div></th>
+              </tr>
+              <tr>
+                <th scope="row" colspan="4"> <div align="right">
+                    &nbsp;Unallocated:</div></th>
+                <td><div align="right">
+                    &nbsp;$0.00</div></td>
+                <th><div align="center"> &nbsp;</div></th>
+              </tr>
             </table>
             <div class="h2-container"> <span class="subhead-left">
               <h2> Cost Sharing Summary</h2>
               </span> </div>
-            <table cellpadding="0" cellspacing="0" summary="view/edit ad hoc recipients">
+            <table cellpadding=0 cellspacing="0" summary="view/edit ad hoc recipients">
               <tr>
-                <th scope="col"><div align="right">Total Allocated:</div></th>
-                <td><div align="right"> $2,100.00 </div></td>
-                <th scope="row"> <div align="right"> Period 1: 06/05/2008 - 06/04/2009:</div></th>
-                <td><div align="right"> $1,300.00 </div></td>
+                <th scope=row><div align="right">Period 1 Cost Sharing:</div></th>
+                <td colspan="3"><label> </label>
+                    <div align="right">$1,300.00 </div></td>
               </tr>
               <tr>
-                <th scope="col"><div align="right">Unallocated:</div></th>
-                <td><div align="right">$0.00 </div></td>
-                <th scope="row"> <div align="right"> Period 2: 06/05/2009 - 06/19/2009:</div></th>
-                <td><div align="right"> $800.00 </div></td>
+                <th scope=row><div align="right">Period 2 Cost Sharing:</div></th>
+                <td colspan="3"><div align="right">$800.00 </div></td>
               </tr>
               <tr>
-                <th colspan="3" scope="col"> <div align="right"> Total:</div></th>
-                <td><div align="right"> $2,100.00 </div></td>
+                <th scope=row><div align="right">Total Cost Sharing:</div></th>
+                <td colspan="3"><div align="right">$2,100.00 </div></td>
               </tr>
             </table>
-         <a href="#"><br>
+            <a href="#"><br>
          <img src="../images/tinybutton-resettodefault.gif" alt="delete" width="89" height="15" hspace="3"
                                                     vspace="3" border="0"><img src="../images/tinybutton-recalculate.gif" alt="delete" width="72" height="15" hspace="3"
                                                     vspace="3" border="0"></a>
@@ -266,11 +277,11 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
             <table cellpadding="0" cellspacing="0" summary="view/edit ad hoc recipients">
               <tr>
                 <th scope="col">&nbsp; </th>
-                <th scope="col"> <label for="fiscal year"> *Fiscal Year</label></th>
-                <th scope="col"> <label for="rate"> *Applicable Rate</label></th>
-                <th scope="col"> <label for="campus"> *Campus</label></th>
-                <th scope="col"> *Source Account</th>
-                <th scope="col"> <label for="unrecovered f&a">*Amount</label></th>
+                <th scope="col"> <label for="fiscal year"> Fiscal Year</label></th>
+                <th scope="col"> <label for="rate"> Applicable Rate</label></th>
+                <th scope="col"> <label for="campus"> On Campus</label></th>
+                <th scope="col"> Source Account</th>
+                <th scope="col"> <label for="unrecovered f&a">Amount</label></th>
                 <th scope="col"> Actions</th>
               </tr>
               <tr>
@@ -279,7 +290,10 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                     <input name="CostSharingFiscalYearAdd" style="text-align: right;" type="text" id="Text7"
                                                 size="10" maxlength="4">
                   </div></td>
-                <td class="infoline"><div align="center"> &nbsp;</div></td>
+                <td class="infoline"><div align="center"> &nbsp;
+                  <input name="CostSharingFiscalYearAdd2" style="text-align: right;" type="text" id="CostSharingFiscalYearAdd2"
+                                                size="10" maxlength="4">
+                </div></td>
                 <td class="infoline"><div align="center">
                   <select name="select" id="select">
                       <option selected>select</option> <option>yes</option>
@@ -461,9 +475,9 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
             <table cellpadding="0" cellspacing="0" summary="view/edit ad hoc recipients">
               <tr>
                 <th scope="col">&nbsp; </th>
-                <th scope="col"> <label for="period"> *Period</label></th>
-                <th scope="col"> <label for="description"> *Description</label></th>
-                <th scope="col"> <label for="income">*Amount</label></th>
+                <th scope="col"> <label for="period"> Period</label></th>
+                <th scope="col"> <label for="description"> Description</label></th>
+                <th scope="col"> <label for="income">Amount</label></th>
                 <th scope="col"> Actions</th>
               </tr>
               <tr>
@@ -555,7 +569,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
           </table>
         </div>
         <div align="right"> <br>
-          * required </div>
+          </div>
         <div class="globalbuttons"> <a href="#"></a> <img src="../images/buttonsmall_save.gif" alt="save" width="53" height="18" hspace="5"
                             border="0"><a href="#"></a><a href="#"><img src="../images/buttonsmall_close.gif"
                                 alt="cancel" width="48" height="18" hspace="5" border="0"></a><a href="#"><img src="../images/buttonsmall_cancel.gif"
