Change mentioned by Tyler - “OH – TDC”  changed to F&A
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6086 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra-coeus-7-25/bud-totals1.html
+++ b/kra-coeus-7-25/bud-totals1.html
@@ -199,7 +199,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                 </tr>
                 <tr>
                   <td >&nbsp;</td>
-                  <td  align="right">OH - TDC</td>
+                  <td  align="right">F&amp;A - TDC</td>
                   <td  align="right"><div align="right">.00</div></td>
                   <td  align="right"><div align="right">.00</div></td>
                   <td  align="right"><div align="right">.00</div></td>
