Minor Changes as pointed out by Lora
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6104 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra-coeus-dev/prop-grantsgov-old.html
+++ b/kra-coeus-dev/prop-grantsgov-old.html
@@ -103,6 +103,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
           <table width="100%" cellpadding="0"  cellspacing="0" class="tab" summary="">
             <tr>
               <td class="tabtable1-left"><img src="../images/tab-topleft.gif" alt="" width="12" height="29" align="absmiddle">Grants.gov</td>
+              <td class="tabtable1-mid1">&nbsp;</td>
               <td class="tabtable1-mid">&nbsp;</td>
               <td class="tabtable1-right"><img src="../images/tab-topright.gif" alt="" width="12" height="29" align="absmiddle"></td>
             </tr>
@@ -111,8 +112,25 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
             <div class="h2-container"><span class="subhead-left">
               <h2>Opportunity Search </h2>
             </span><span class="subhead-right"> <a style="font-weight:normal; color:#ffffff" href="#" target="_blank">www.grants.gov</a> <a href="#"> <img src="../images/my_cp_inf.gif" alt="help" width=15 height=14 border=0 align=absmiddle onClick="MM_openBrWindow('help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></span></div>
-            Grants.gov Lookup<img src="../images/searchicon.gif" width="16" height="16"><br>
-            <span class="tab-container" style="display: nonee;"><span class="tab-container" style="display: nonee;"> </span></span><br>
+            <table cellpadding=0 cellspacing="0" summary="">
+             
+              <tbody id="" style="display: nonee;">
+                <tr>
+                  <th width="35%"><div align="right">CFDA Number: </div></th>
+                  <td><label>
+                    <input name="textfield" type="text" id="textfield" value="11.222" size="12">
+                    <br>
+                    </label></td>
+                </tr>
+                <tr>
+                  <th><div align="right">Opportunity ID:</div></th>
+                  <td><label for="imageField"></label>
+                    <input name="textfield" type="text" id="textfield" size="12"></td>
+                </tr>
+              </tbody>
+            </table>
+            <br>
+            <span class="tab-container" style="display: nonee;"><img src="../images/tinybutton-grantsgovlook.gif" alt="grantsgov" width="101" height="15"><span class="tab-container" style="display: nonee;"> <img src="../images/tinybutton-remvopp.gif" alt="grantsgov" width="111" height="15"></span></span><br>
             <br>
             <table cellpadding=0 cellspacing="0" summary="">
               <tr>
