--- a/kra-coeus-irb-8-27/irb-protocol-MR.html
+++ b/kra-coeus-irb-8-27/irb-protocol-MR.html
@@ -241,14 +241,14 @@ Non-employee Search
               <td class="tabtable2-right"><img src="../images/tab-topright1.gif" alt="" width="12" height="29" align="absmiddle"></td>
             </tr>
           </table>
-          <div class="tab-container" align="center" id="G423" style="display: none;">
+          <div class="tab-container" align="center" id="G423" style="display: nonee;">
             <div class="h2-container"> <span class="subhead-left">
               <h2>Additional Information</h2>
               </span><span class="subhead-right"> <span class="subhead"><a href="#"> <img src="../images/my_cp_inf.gif" alt="help" width="15" height="14" border="0" align="absmiddle" onClick="MM_openBrWindow('../kra-coeus-irb/help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></span></span></div>
             <table cellpadding=0 cellspacing=0 summary="">
               <tr>
                 <th width="33%"><div align="right">
-                    <label for="status">FDA Application Id:</label>
+                    <label for="status">FDA IND or IDE #:</label>
                   </div></th>
                 <td width="26%"><input name="document.documentHeader.organizationDocumentNumber2" maxlength="10" size="12" tabindex="0" value="" onchange="" onblur="" style="" id="document.documentHeader.organizationDocumentNumber2" type="text"></td>
                 <th width="23%"><div align="right">
